Update to use Operator 3.0.0